--- a/editpopoutwindow.ui
+++ b/editpopoutwindow.ui
@@ -304,6 +304,50 @@
     <string>Delete Success</string>
    </property>
   </widget>
+  <widget class="QLabel" name="removesuccess_text">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>352</y>
+     <width>109</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Arial</family>
+     <pointsize>8</pointsize>
+     <bold>true</bold>
+     <stylestrategy>PreferDefault</stylestrategy>
+     <kerning>true</kerning>
+    </font>
+   </property>
+   <property name="text">
+    <string>Remove Success</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="addsuccess_text">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>352</y>
+     <width>80</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Arial</family>
+     <pointsize>8</pointsize>
+     <bold>true</bold>
+     <stylestrategy>PreferDefault</stylestrategy>
+     <kerning>true</kerning>
+    </font>
+   </property>
+   <property name="text">
+    <string>Add Success</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
